Add future features brainstorm and UI enhancements
Introduced FUTURE_FEATURES.md with an extensive brainstorm of potential features for the Valute app. Added new UI components (Calendar, DatePicker, Popover, TimePicker, AssetList, ExpenseList), new pages (FloatingTimerPage, ProjectDetailsPage), and new services (AssetService, DashboardService). Updated database schema, migrations, and removed deprecated store/service files. Enhanced documentation and configuration files, and made various improvements across renderer components and stores.

--- a/package.json
+++ b/package.json
@@ -23,16 +23,20 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.45.1",
     "framer-motion": "^12.27.1",
-    "jspdf": "^4.0.0",
-    "jspdf-autotable": "^5.0.7",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.562.0",
+    "react-day-picker": "^8.10.1",
     "react-router-dom": "^7.12.0",
+    "recharts": "^3.7.0",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0",
     "zod": "^4.3.5",
