ci: add GitHub Actions release workflow for cross-platform builds

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,4 +1,4 @@
-appId: com.electron.app
+appId: com.melihzafer.valute
 productName: valute-app
 directories:
   buildResources: build
@@ -39,5 +39,7 @@ appImage:
   artifactName: ${name}-${version}.${ext}
 npmRebuild: false
 publish:
-  provider: generic
-  url: https://example.com/auto-updates
+  provider: github
+  owner: melihzafer
+  repo: valute-app
+  releaseType: release
