fix(ci): remove snap target from Linux builds (requires snapcraft)

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -31,9 +31,8 @@ dmg:
 linux:
   target:
     - AppImage
-    - snap
     - deb
-  maintainer: electronjs.org
+  maintainer: melihzafer
   category: Utility
 appImage:
   artifactName: ${name}-${version}.${ext}
