Add icons, screenshot & focus services
Add app icon assets and wire them into electron-builder; update package.json. Introduce screenshot, focus-guard, settings and data services (src/main/services), plus a new DB migration (0004) and migration metadata. Update main/preload code, shared types and DB wiring. Add renderer UI for focus nudges and screenshot flows (new components and pages), adjust existing components (App, forms, timer, project/settings pages) and utility code to integrate these features.

--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "npm run build && electron-builder --mac",
-    "build:linux": "npm run build && electron-builder --linux"
+    "build:linux": "npm run build && electron-builder --linux",
+    "build:all": "npm run build && electron-builder --win --linux",
+    "release": "npm run build && electron-builder --win --mac --linux --publish always",
+    "build-icons": "electron-icon-builder --input=./build/icon.png --output=./build --flatten"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
+    "canvas": "^3.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -55,6 +59,7 @@
     "drizzle-kit": "^0.31.8",
     "electron": "^39.2.6",
     "electron-builder": "^26.0.12",
+    "electron-icon-builder": "^2.0.1",
     "electron-vite": "^5.0.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react": "^7.37.5",
