--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build:mac": "npm run build && electron-builder --mac",
     "build:linux": "npm run build && electron-builder --linux",
     "build:all": "npm run build && electron-builder --win --linux",
-    "release": "npm run build && electron-builder --win --mac --linux --publish always",
+    "release": "npm run build && electron-builder --win --linux --publish always",
     "build-icons": "electron-icon-builder --input=./build/icon.png --output=./build --flatten"
   },
   "dependencies": {
